# research-agent

./: ARCHITECTURE.md  README.md  pyproject.toml
src/research_agent/: __init__.py  cli.py  deep_agent.py  graph.py  models.py  quality.py  retrieval.py  services.py
tests/: test_graph.py  test_quality.py
